tenace (0.7) upstream; urgency=low

  * Board list can be reordered via the options menu.

 -- Christoph Berg <myon@debian.org>  Mon, 24 Mar 2008 21:19:40 +0100

tenace (0.6) upstream; urgency=low

  * Solver:
    + Always use dealt cards for parscore computation.
    + Parscore computation was broken when S makes more tricks than N.
  * UI:
    + Move fast forward/rewind to menu, make to buttons go one trick
      forward/backward, and generally reorder menu.
    + Support dragging to/from card window.
    + Implement options window and read/write ~/.config/tenacerc as keyfile.
    + Card filename and rendering size are now configurable.
    + Sort recently used files by time.
  * Hand widget: Start dragging manually to prevent dragging 'x' and empty
    cards.
  * Examples: Add squeeze.lin.

 -- Christoph Berg <myon@debian.org>  Sun, 16 Mar 2008 00:11:54 +0100

tenace (0.5) upstream; urgency=low

  * Use GTK_CHECK_VERSION to disable parts that require Gtk 2.10
    (recently used menu) and 2.12 (tooltips for alert explanations).

 -- Christoph Berg <myon@debian.org>  Sat, 09 Feb 2008 00:50:11 +0100

tenace (0.4) upstream; urgency=low

  * File handling:
    + EW vuln was parsed incorrectly; 0 is also none.
    + Fix parsing of tournament records.
    + Store number of claimed tricks.
    + Implement saving of multiple boards.
    + Add recently-used handling and filters.
  * Hand display:
    + Nicely shaped cards in table display.
  * Bidding:
    + Fix "make bids for current contract".
  * Add README and require gtk+ 2.12.
  * Translations: de.

 -- Christoph Berg <myon@debian.org>  Thu, 07 Feb 2008 00:12:15 +0100

tenace (0.3) upstream; urgency=low

  * Initial public release.

 -- Christoph Berg <myon@debian.org>  Sun, 06 Jan 2008 22:28:27 +0100

tenace (0.2) upstream; urgency=low

  * New snapshot.

 -- Christoph Berg <myon@debian.org>  Wed, 28 Nov 2007 20:25:04 +0100

tenace (0.1) upstream; urgency=low

  * Initial release.