@@ -1,1 +1,0 @@
-dist_pkgdata_DATA = grey.svg
